server/lib: add generic hypervisor enlightenment interface (#846)
Implement some basic infrastructure to support hypervisor
enlightenments. The general idea is as follows:

- propolis-lib defines `Enlightenment` and `EnlightenmentDevice` traits
  that are implemented by components that provide a particular
  guest-hypervisor interface.
- Library users instantiate their chosen enlightenment stack and pass
  the resulting `Arc<dyn EnlightenmentDevice>` to the lib's
  `machine::Builder`. The resulting `Machine` contains vCPU objects that
  hold a reference to the selected `Enlightenment`. This allows them to
  forward RDMSR/WRMSR exits to the enlightenment stack for (possible)
  processing.
- Library users can call `Enlightenment::add_cpuid` to allow hypervisor
  interfaces to inject CPUID identifiers into the `CpuidSet`s that are
  used to configure the VM's vCPUs.
- Finally, library users can upcast an `EnlightenmentDevice` to an
  `Arc<dyn Lifecycle>` and use that reference to dispatch lifecycle and
  migration notifications to the active enlightenment stack.

Implement a `BhyveGuestInterface` enlightenment stack that implements
these interfaces but does nothing beyond exposing its vendor string in
CPUID leaf 0x4000_0000. This matches the hypervisor-related CPUID and
MSR behavior guests would have gotten before this change. More
interesting hypervisor interfaces are left for future PRs.

Add an instance spec field to allow propolis-server clients to select an
enlightenment stack. If not specified this defaults to the bhyve
interface; this provides compatibility when migrating to/from servers
built without this code.
