# openapi/propolis-server.json
@@ -469,6 +469,14 @@
             "format": "uint8",
             "minimum": 0
           },
+          "guest_hv_interface": {
+            "description": "The hypervisor platform to expose to the guest. The default is a bhyve-compatible interface with no additional features.\n\nFor compatibility with older versions of Propolis, this field is only serialized if it specifies a non-default interface.",
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/GuestHypervisorInterface"
+              }
+            ]
+          },
           "memory_mb": {
             "description": "The amount of guest RAM attached to this VM.",
             "type": "integer",
@@ -1024,6 +1032,27 @@
           "readonly"
         ],
         "additionalProperties": false
+      },
+      "GuestHypervisorInterface": {
+        "description": "A hypervisor interface to expose to the guest.",
+        "oneOf": [
+          {
+            "description": "Expose a bhyve-like interface (\"bhyve bhyve \" as the hypervisor ID in leaf 0x4000_0000 and no additional leaves or features).",
+            "type": "object",
+            "properties": {
+              "type": {
+                "type": "string",
+                "enum": [
+                  "Bhyve"
+                ]
+              }
+            },
+            "required": [
+              "type"
+            ],
+            "additionalProperties": false
+          }
+        ]
       },
       "I440Fx": {
         "description": "An Intel 440FX-compatible chipset.",
